fixes #1516 better color for links in dark mode

--- a/admin/themes/roma/theme.css
+++ b/admin/themes/roma/theme.css
@@ -111,7 +111,7 @@ a.Piwigo:hover  span.Piwigo  {
 *, *:focus, *:active, input:active, a:active, input:focus, a:focus { outline: none; -moz-outline-width: 0px; }
 */
 
-a { color:#3A3A3A; }
+a { color:#777; }
 a:hover, a:active { color: #f70; cursor: pointer; }
 ul.actions, .content form#waiting  {text-align:center;}
 
